src/main/java/com/example/pokerv2/error/CustomException.java
package com.example.pokerv2.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
    
}
